2014-11-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.7 release procedure:
 	Changes since nco-4_4_6: -0->-1, rename bug, cnk xst, cnk_min, -X,
	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1

	* Support passing (int *)NULL to nc_inq_format_extended() stub

	* Fix GSL and UDUnits flags in Makefile (fixes yellowstone builds)

2014-11-15  Charlie Zender  <zender@uci.edu>

	* Use new NC_HAS_HDF4 to report HDF4 support with ncks -r

2014-11-12  Charlie Zender  <zender@uci.edu>

	* Document new chunking features

2014-11-11  Charlie Zender  <zender@uci.edu>

	* cnk_rew appears to work for rank = 3. Need larger datasets to be sure.

	* Tidy nco_bld_crd_aux()

2014-11-10  Charlie Zender  <zender@uci.edu>

	* Add regression test for non-coordinate dimension auxiliary coordinate variables

2014-11-05  Charlie Zender  <zender@uci.edu>

	* Almost finished implementing cnk_rew

	* cnk_min=0 sets minimum size of variables to chunk as twice blocksize

	* Using -X now imposes CNV_CCM_CCSM_CF=True regardless of Conventions attribute

2014-11-03  Charlie Zender  <zender@uci.edu>

	* Add regression for auxiliary coordinates

	* First regression-free version in three weeks

	* Now that nco_cnk_sz_set_trv() always called, allow it to work when ncecat creates new record dimension

	* Fix long-time bug where nco_cpy_var_dfn_trv() incorrectly sets dmn_cmn[].is_rec_var for record dimensions affected by
	--fix_rec_dmn or --mk_rec_dmn invocation (always set incorrectly except on first variable affected)

2014-10-31  Charlie Zender  <zender@uci.edu>

	* Adjust regression tests to work with --cnk_min. Document --cnk_min.

2014-10-31  Henry Butowsky  <henryb@hush.com>

	* ncap_cst_mk() in ncap2_utl.cc checks that record dim is the first dim in list ONLY if nc3 file
	  and nc4 file. This also allows users to define vars with multiple record dims.
